--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,9 @@
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet libero velit alias nulla earum, sequi mollitia eligendi nobis doloremque blanditiis dolorum repudiandae cumque unde ex, quibusdam sunt ipsa consectetur quae.
+{% extends 'layout.html' %}
+
+{% block content %}
+<h1 class="text-light">About</h1>
+<p class="text-light">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet libero velit alias nulla earum, sequi mollitia eligendi nobis doloremque blanditiis dolorum repudiandae cumque unde ex, quibusdam sunt ipsa consectetur quae.
 Dicta quaerat laudantium, cum rerum repellat officiis nisi aliquid pariatur sequi velit beatae quasi nostrum, quae quas soluta placeat? Veniam recusandae harum totam perspiciatis nihil consequuntur vel expedita error illum.
 Velit neque fuga enim reiciendis fugit corrupti! Voluptatem neque voluptates doloremque consequuntur iusto tenetur delectus odit, modi totam recusandae architecto aliquid, aspernatur reiciendis animi, deserunt voluptatum. Dolorem quia dolor odio?
 Eveniet temporibus, animi odio nulla culpa quam dicta qui eaque, quos minima amet. Error adipisci dolore, sit quaerat pariatur corrupti amet est nam esse ex nostrum, aliquam, molestias facilis aliquid?
@@ -10,11 +15,5 @@ Laboriosam cupiditate recusandae, alias excepturi in officia sequi velit deserun
 Dolorem molestiae ipsum perspiciatis at aliquid ab tempora distinctio quaerat, sed rem perferendis deserunt placeat minus ex id optio iusto aperiam quis suscipit fugit provident officia a! Temporibus, quisquam natus?
 Nemo molestias itaque saepe sit eum nesciunt veniam provident. Debitis, veniam cum qui corporis tempora repellendus optio a beatae provident. Dolore voluptatum quo vel quia ut similique consectetur a maxime.
 Consequatur possimus illum aperiam modi eveniet nesciunt molestiae dolores velit voluptatum deleniti culpa in nobis asperiores, minus officiis vitae nostrum quasi obcaecati accusantium cum, consectetur corporis numquam eum tenetur? Autem.
-Ullam id sit sequi ipsa dicta similique deleniti accusantium consequatur soluta, fuga temporibus assumenda ipsum quos amet delectus non dolorum saepe, quaerat accusamus harum! Corrupti laborum voluptas ex quas fuga?
-Suscipit aliquid eos quasi dolores exercitationem iusto amet repellendus dolorum aspernatur perspiciatis id, ex quos, non ab aut laborum praesentium laudantium hic sequi, enim voluptates? Ea doloremque delectus quo deleniti.
-Asperiores explicabo eveniet pariatur totam. Vel assumenda distinctio et! Voluptatibus consequatur, repudiandae aspernatur placeat atque facilis porro quas consectetur beatae vitae minus sit recusandae deserunt earum quaerat praesentium. Animi, quibusdam.
-Laudantium incidunt soluta veniam fugit. Maxime doloremque iure exercitationem ducimus provident eum saepe! Non rem neque cum ex quo molestiae quaerat, nihil aliquid ipsam adipisci distinctio delectus sed nostrum nobis.
-Reprehenderit cum illo odio vero tempore animi! Eius, laudantium in praesentium beatae exercitationem libero quam vel ab sint facere sit quibusdam, nam sequi et tempora soluta quo autem ex ducimus?
-Aspernatur quidem nulla a exercitationem at esse, vel, quasi asperiores iure hic laborum porro distinctio magnam magni ut atque itaque! Vero error dolore quo! Ipsam obcaecati aliquam atque qui exercitationem!
-Cupiditate suscipit quidem laborum aliquam saepe similique sapiente porro. Veritatis ipsam maxime ex repudiandae, eligendi modi deleniti expedita perferendis quis doloribus blanditiis impedit nulla debitis, quam quia obcaecati? Officiis, incidunt!
-Quaerat aliquid officiis quisquam unde doloremque neque! Maxime, obcaecati laudantium, iste aliquam ducimus provident repudiandae minus optio distinctio omnis quidem, iure totam! Qui consectetur dolorem suscipit voluptas voluptatum a quam?
+</p>
+{% endblock %}
